# Rust-Study

./: .gitignore  README.md
adder/: Cargo.toml  run_adder.py
adder/src/: lib.rs
b64-encoder/: Cargo.toml  README.md
b64-encoder/src/: main.rs
hello-crypto-rust/: Cargo.toml
hello-crypto-rust/src/: lib.rs  main.rs
substrate-pallet-erc20/: .gitignore  Cargo.toml  README.md
substrate-pallet-erc20/pallets/pallet-erc20/: Cargo.toml
substrate-pallet-erc20/pallets/pallet-erc20/src/: lib.rs  mock.rs  tests.rs
substrate-pallet-erc20/runtime/: Cargo.toml
substrate-pallet-erc20/runtime/src/: lib.rs
using-lib-example/: Cargo.toml
using-lib-example/a-lib/: Cargo.toml
using-lib-example/a-lib/src/: lib.rs  output.rs
using-lib-example/src/: main.rs
webase-interactor-example/: Cargo.toml
webase-interactor-example/src/: main.rs
webase-interactor-example/webase-interactor/: Cargo.toml
webase-interactor-example/webase-interactor/src/: chain.rs  lib.rs
